--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <div class="subtitle">
             <ul class="ul-head">
-                <li class="list-head"><a href="#about-me" class="a-head">About Me</a></li>
+                <li class="list-head"><a href="#" class="a-head">About Me</a></li>
                 <li class="list-head"><a href="#projects" class="a-head">Projects</a></li>
                 <li class="list-head"><a href="#contact" class="a-head">Contact</a></li>
             </ul>
